# edgeup-ai-prototype

./: .gitignore  README.md  package-lock.json
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ask-upsc/: page.tsx
frontend/app/current-affairs/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/practice/: page.tsx
frontend/app/upload-material/: page.tsx
frontend/components/: query-provider.tsx
frontend/components/analytics/: current-affairs-feed.tsx  dashboard-overview.tsx
frontend/components/chat/: ask-upsc-chat.tsx
frontend/components/forms/: upload-material-form.tsx
frontend/components/layout/: features.tsx  hero.tsx  learning-path.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
frontend/components/practice/: mains-practice.tsx  mcq-practice.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  tabs.tsx  toast.tsx  toaster.tsx
frontend/hooks/: use-toast.ts
frontend/lib/: api.ts  mock-data.ts  types.ts  utils.ts
python_ai/: README.md  app.py  current_affairs_ingest.py  rag_pipeline_upsc.py  requirements.txt
rust_api/: Cargo.toml  README.md
rust_api/src/: main.rs
scripts/: run_services.sh
