[package]  
name = "rust_api"  
version = "0.1.0"  
edition = "2021"  

[dependencies]  
actix-web = "4"  
reqwest = { version = "0.11", features = ["json"] }  
dotenv = "0.15"  
serde = { version = "1.0", features = ["derive"] }  
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
